--- a/app/views/irm/data_share_rules/_edit_form.html.erb
+++ b/app/views/irm/data_share_rules/_edit_form.html.erb
@@ -64,14 +64,7 @@
   <div class="pbBody">
 
     <div  class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
+
       <h3><%= t(:label_irm_data_share_rule_step2) %></h3>
     </div>
     <div class="pbSubsection">
@@ -106,14 +99,7 @@
     <div class="pbBody">
 
     <div   class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
+
       <h3><%= t(:label_irm_data_share_rule_step3) %></h3>
     </div>
     <div class="pbSubsection">
@@ -145,15 +131,8 @@
   </div>
     <div class="pbBody">
 
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
+    <div   class="pbSubheader first tertiaryPalette">
+
       <h3><%= t(:label_irm_data_share_rule_step4) %></h3>
     </div>
     <div class="pbSubsection">
