补充优化数据共享规则新建页面和编辑页面的TITLE，添加业务对象名称

--- a/app/views/irm/data_accesses/index.html.erb
+++ b/app/views/irm/data_accesses/index.html.erb
@@ -67,7 +67,7 @@
             <tr>
               <td class="pbTitle"><h2 class="mainTitle"><%=data_access[:business_object_name]+t(:label_irm_data_share_rule)  %></h2></td>
               <td   class="pbButton">
-                <div class="button"><%= link_to(t(:new),{:controller => "irm/data_share_rules",:action=>"new",:business_object_id=>data_access[:business_object_id],:business_object_name=>data_access[:business_object_name]},:back=>true) %></div>
+                <div class="button"><%= link_to(t(:new),{:controller => "irm/data_share_rules",:action=>"new",:business_object_id=>data_access[:business_object_id]},:back=>true) %></div>
               </td>
               <td class="pbHelp">
                 <div  ></div>
@@ -109,7 +109,7 @@
                     <tr id="<%=rule[:id]%>">
                       <td>
                         <div>
-                           <%= link_to(t(:edit),{:controller => "irm/data_share_rules",:action=>"edit",:id=>"#{rule[:id]}",:business_object_name=>data_access[:business_object_name]}) %>|<%= link_to(t(:delete),{:controller => "irm/data_share_rules",:action=>"destroy",:id=>"#{rule[:id]}"},{:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) }) %>
+                           <%= link_to(t(:edit),{:controller => "irm/data_share_rules",:action=>"edit",:id=>"#{rule[:id]}"}) %>|<%= link_to(t(:delete),{:controller => "irm/data_share_rules",:action=>"destroy",:id=>"#{rule[:id]}"},{:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) }) %>
                         </div>
                       </td>
                       <td>
