--- a/app/views/irm/data_share_rules/_edit_form.html.erb
+++ b/app/views/irm/data_share_rules/_edit_form.html.erb
@@ -5,7 +5,7 @@
 }
 
 </style>
-<%= form_for(@data_share_rule,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@data_share_rule,:url=>{:action=>"update",:id=>@data_share_rule[:id]},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="edit-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
