--- a/app/views/irm/data_share_rules/edit.html.erb
+++ b/app/views/irm/data_share_rules/edit.html.erb
@@ -1,2 +1,2 @@
-<%= page_title(params[:business_object_name]+t(:label_irm_data_share_rule)) %>
+<%= page_title(@business_object[:name].to_s+t(:label_irm_data_share_rule)) %>
 <%= render 'edit_form' %>
