修复在谷歌浏览器下点击退出系统按钮无法正常退出

--- a/app/views/irm/session_settings/timeout_warn.html.erb
+++ b/app/views/irm/session_settings/timeout_warn.html.erb
@@ -69,8 +69,8 @@
     }
   }
   function doLogout() {
-    window.location = "/logout";
-    window.opener.location.href = window.opener.location.href
+
+    window.opener.location.href = "/logout";
     window.close();
   }
   function doNotTimeout() {
