实现在弹出小窗口时，用户不点击按钮，而是直接关掉了小窗口时，系统需要自动退出的功能。

--- a/app/views/irm/session_settings/timeout_warn.html.erb
+++ b/app/views/irm/session_settings/timeout_warn.html.erb
@@ -59,6 +59,7 @@
     </div>
 <script>
   setTimeout(doTimeout, 25*1000);
+  window.onunload=doLogout;
   function doTimeout() {
     if (window.opener.forceLogout) {
         window.opener.doLogout();
@@ -69,7 +70,6 @@
     }
   }
   function doLogout() {
-
     window.opener.location.href = "/logout";
     window.close();
   }
@@ -77,6 +77,10 @@
     window.opener.checkSessionTimeout();
     window.close();
   }
+
+
+
+
 </script>
 </body>
 
