修复BUG实现在弹出小窗口时，用户不点击按钮，而是直接关掉了小窗口时，系统需要自动退出的功能。

--- a/app/views/irm/session_settings/timeout_warn.html.erb
+++ b/app/views/irm/session_settings/timeout_warn.html.erb
@@ -59,7 +59,11 @@
     </div>
 <script>
   setTimeout(doTimeout, 25*1000);
-  window.onunload=doLogout;
+  var continue_work=false;
+  window.onunload=function(){
+      if (continue_work==false)
+         doLogout();
+  };
   function doTimeout() {
     if (window.opener.forceLogout) {
         window.opener.doLogout();
@@ -74,6 +78,7 @@
     window.close();
   }
   function doNotTimeout() {
+    continue_work=true;
     window.opener.checkSessionTimeout();
     window.close();
   }
