修复Bug #1116  事故单回复页面与变更单回复页面中的tab页样式不一致

--- a/app/views/chm/change_requests/_show_tmp.html.erb
+++ b/app/views/chm/change_requests/_show_tmp.html.erb
@@ -2,6 +2,9 @@
   .hidden {
       display:none;
   }
+  #nav li.currentTab {
+      margin: 0 4px -1px 6px;
+  }
 </style>
 <%= page("showRequest") do |p| %>
     <%= p.page_header(:title_options=>{:action_meaning=>"(#{@change_request[:change_status_name]})[#{@change_request[:request_number]}]#{@change_request[:title]}"}) %>
