--- a/app/views/chm/change_requests/get_data.html.erb
+++ b/app/views/chm/change_requests/get_data.html.erb
@@ -2,6 +2,29 @@
   .table_icon {
       display: inline;
   }
+  .table_icon a.expand_icon {
+      background: url('../images/filter_hide.gifx') no-repeat 0 0;
+      width: 16px;
+      height: 16px;
+      text-indent:-9999px;
+      display: block;
+  }
+  .table_icon a.collapse_icon {background: url('../images/filter_reveal.gifx') no-repeat 0 0;
+      width: 16px;
+      height: 16px;
+      text-indent:-9999px;
+      display: none;
+  }
+  .table_icon .workflow {
+      width: 18px;
+      height: 18px;
+  }
+  .requested { background: url('../images/workflow_requested.gif') no-repeat 0 0;}
+  .active {background: url('../images/workflow_active.gif') no-repeat 0 0;}
+  .pending {background: url('../images/workflow_pending.gif') no-repeat 0 0;}
+  .complete {background: url('../images/workflow_complete.gif') no-repeat 0 0;}
+  .closed {background: url('../images/workflow_approval_rejected.gif') no-repeat 0 0;}
+
   .table_icon td {
       border: 0 !important;
   }
@@ -19,6 +42,8 @@
   }
   .header_name {
       padding: 2px 3px !important;
+      display: block;
+      min-width: 50px;
   }
   .expand .name {
       display: block !important;
@@ -34,20 +59,21 @@
     $(document).ready(function(){
         $(".expand_icon").bind('click', function(){
             var parent_table = $(this).parent();
-            parent_table.find(".collapse_icon").show();
+            parent_table.find(".collapse_icon").css("display", "block");
             $(this).hide();
-            parent_table.parent().parent().find(".expends").find("span").each(function(){
-                $(this).addClass("expand");
-            });
+            parent_table.parent().parent().find(".expends").addClass("expand");
+//            parent_table.parent().parent().find(".expends").find("span").each(function(){
+//                $(this).addClass("expand");
+//            });
         });
-
         $(".collapse_icon").bind('click', function(){
             var parent_table = $(this).parent();
             parent_table.find(".expand_icon").show();
             $(this).hide();
-            parent_table.parent().parent().find(".expends").find("span").each(function(){
-                $(this).removeClass("expand");
-            });
+            parent_table.parent().parent().find(".expends").removeClass("expand");
+//            parent_table.parent().parent().find(".expends").find("span").each(function(){
+//                $(this).removeClass("expand");
+//            });
         });
     });
 </script>
@@ -93,7 +119,7 @@
            </tr>
          </thead>
          <tbody>
-         <% @datas.each do |data| %>
+         <% merge_datas(@datas).each do |data| %>
          <tr id="<%=data[:id]%>">
            <td>
              <div><%= data.request_number %></div>
@@ -107,21 +133,18 @@
                 <tr>
                    <td>
                      <span>
-                       <a class="expand_icon" href="javascript:void(0);"><img src="/images/filter_hide.gifx"></a>
-                       <a class="collapse_icon" style="display: none" href="javascript:void(0);"><img src="/images/filter_reveal.gifx"></a>
+                       <a class="expand_icon" href="javascript:void(0);" title="expand">expand</a>
+                       <a class="collapse_icon" href="javascript:void(0);" title="collapse">collapse</a>
                      </span>
                    </td>
                    <td class="expends"><%= build_stage_collapse(data.change_status_id) %></td>
                 </tr>
               </table>
            </td>
-           <!-- 关联的事故单 -->
            <td class="vt">
-             <table class="table_icon">
-                <tr>
-                   <%= change_incident_show(data.id) %>
-                </tr>
-             </table>
+              <table class="table_icon">
+                <tr><%= change_incident_show(data[:incidents], data.id) %></tr>
+              </table>
            </td>
            <td class="vt">
              <table class="table_icon">
