修复Bug #1116  事故单回复页面与变更单回复页面中的tab页样式不一致

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -101,7 +101,12 @@
         float: left;
         vertical-align: top;
     }
-</style>
+    #nav_0,#nav_1 {
+        margin-right: -4px;
+    }
+
+
+</style>   <!--test-->
 <div id="ep" class="edit-block page-block">
 <div class="pbHeader" id="icm_new_journal_top_menu">
   <table cellpadding="0" cellspacing="0" border="0">
