--- a/app/views/irm/my_info/edit.html.erb
+++ b/app/views/irm/my_info/edit.html.erb
@@ -77,7 +77,7 @@
                <td class="labelCol">
                  <label><%=t(:label_irm_person_notification_flag)%></label>
                </td>
-               <td class="dataCol"><%=f.check_box :notification_flag,:checked => true%></td>
+               <td class="dataCol"><%=f.check_box :notification_flag%></td>
               <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
               <td class="dataCol">
                 <%=f.text_field :home_phone%>
@@ -119,7 +119,7 @@
                <td class="labelCol">
                  <label><%=t(:label_irm_person_approve_request_mail)%></label>
                </td>
-               <td class="dataCol"><%=f.check_box :approve_request_mail,:checked => true%></td>
+               <td class="dataCol"><%=f.check_box :approve_request_mail%></td>
              </tr>
         </tbody>
       </table>
