修正变更单日期格式

--- a/app/views/chm/change_requests/get_data.html.erb
+++ b/app/views/chm/change_requests/get_data.html.erb
@@ -168,7 +168,7 @@
              <div><%= data.requested_by_label %></div>
            </td>
            <td>
-             <div><%= data.submitted_date %></div>
+             <div><%= format_date(data.submitted_date) %></div>
            </td>
            <td>
              <div><%= data.external_system_id_label %></div>
