--- a/app/views/irm/group_members/new_from_person.html.erb
+++ b/app/views/irm/group_members/new_from_person.html.erb
@@ -1,4 +1,4 @@
-<%= common_title(:model_meaning => @person[:full_name], :action_meaning=>t(:label_action_new)) %>
+<%= common_title(:model_meaning => @person[:full_name], :action_meaning=>t(:label_irm_group_member_select_group)) %>
 <%= form_for(@group_member,:url=>{:action=>"create_from_person"},:builder => LabellingFormBuilder) do |f| %>
 <%= f.hidden_field(:status_code) %>
 <% if @step %>
