修复Bug #1117  事故单回复界面，搜索知识库的文本框与回复文本框没有对齐,将样式添加到CSS文件中

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -101,12 +101,8 @@
         float: left;
         vertical-align: top;
     }
-    #nav_0,#nav_1 {
-        margin-right: -4px;
-    }
 
-
-</style>   <!--test-->
+</style>
 <div id="ep" class="edit-block page-block">
 <div class="pbHeader" id="icm_new_journal_top_menu">
   <table cellpadding="0" cellspacing="0" border="0">
@@ -381,7 +377,7 @@
               <% if !limit_device?&&allow_to_function?(:view_skm_entries) %>
                   <div id="linktoSKM" class="hidden">
                     <div class="pbSubsection">
-                      <div style="padding:5px 0 5px 9px;">
+                      <div class="searchSKMText">
                         <input id="searchSKMText" type="text" size="35"/>
 
                         <div class="button" style="float:none !important; display:inline">
