--- a/app/views/irm/lookup_values/_new_form.html.erb
+++ b/app/views/irm/lookup_values/_new_form.html.erb
@@ -1,5 +1,6 @@
 <%= setting_title %>
-
+<% require_javascript(:datepicker) %>
+<% require_css(:datepicker) %>
 <%= form_for(@lookup_value,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
 <%= hidden_field_tag :lookup_type,@lookup_type %>
 <%= hidden_field_tag :return_url,@return_url %>
@@ -43,28 +44,27 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_lookup_code)%></label></td>
               <td class="dataCol"><%=f.text_field :lookup_code,:required=>true,:irm_uppercase=>true %></td>
-              <td class="labelCol"><label><%=(t :label_start_date_active)%></label></td>
-              <td class="dataCol"><%=f.text_field :start_date_active,:required=>true,:id=>"date1",:size=>18%>
-                <button type="button" id="show1" title="Show Calendar">
-                  <img src="assets/calbtn.gif" width="18" height="18" alt="Calendar" >
-                </button>
-              </td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_meaning)%></label></td>
               <td class="dataCol"><%=f.text_field :meaning,:required=>true%></td>
-              <td class="labelCol"><label><%=(t :label_end_date_active)%></label></td>
-              <td class="dataCol"><%=f.text_field :end_date_active,:id=>"date2",:size=>18%>
-                <button type="button" id="show2" title="Show Calendar">
-                  <img src="assets/calbtn.gif" width="18" height="18" alt="Calendar" >
-                </button>              
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="date1"><%=(t :label_start_date_active)%></label></td>
+              <td class="dataCol">
+                <%=f.text_field(:start_date_active,:required=>true,:id=>"date1",:size=>18,:class=>"date",:nobutton=>true)%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="date2"><%=(t :label_end_date_active)%></label></td>
+              <td class="dataCol">
+                <%=f.text_field(:end_date_active,:id=>"date2",:size=>18,:class=>"date",:nobutton=>true) %>
               </td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_description)%></label></td>
               <td class="dataCol"><%=f.text_area :description,:rows=>4%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
+
             </tr>
         </tbody>
       </table>
@@ -89,6 +89,3 @@
   </div>
 </div>
 <% end %>
-
-<%= calendar_view("date1","date1","cal1")%>
-<%= calendar_view("date2","date2","cal2")%>
