修改首页portal样式与调查问卷样式

--- a/public/themes/default/stylesheets/style.css
+++ b/public/themes/default/stylesheets/style.css
@@ -78,8 +78,7 @@ body {margin:0;padding:0;background:#eee}
 .max {float:none !important; width:100% !important}
 .min {display:none}
 .moduleFrame {border:0; overflow:hidden;}
-.moduleHeader {padding:2px; background:#888; color:#fff; cursor:move; overflow:hidden;
-				border-width:1px; border-style:solid; border-color: #777 #eee #eee #777;line-height: 24px !important;}
+.moduleHeader {padding:2px; cursor:move; overflow:hidden;border-width:1px; line-height: 24px !important;}
 .moduleTitle {background:url(../images/jpolite/icon.gif) no-repeat; height:1.4em; line-height:1.4em; float:left; padding-left:18px; font-weight:bold}
 .moduleActions {display:none; float:right}
 .moduleActions b {cursor:pointer;width:16px;height:16px;display:block;float:left}
@@ -127,3 +126,7 @@ body {margin:0;padding:0;background:#eee}
 #footer_bar {color:#999; border-bottom:1px solid #ccc; padding:4px 6px; height:1.2em; margin-bottom:10px; background:#fff}
 #footer_bar a {color:#999}
 #footer_bar a:hover {color:#333}
+.moduleFrame .moduleHeader{
+    background: url("../images/tabbar_sprite.png") repeat-x scroll left -73px transparent;
+    position: relative;
+}
